# POO-2022-SHT

./: README.md
Ejercicios en Clase/Torres de Niza/: Administracion.cpp  Administracion.h  Main.cpp  Propiedad.cpp  Propiedad.h  Propietario.cpp  Propietario.h  makefile
Ejercicios en Clase/Torres de Niza1.5/: Administracion.cpp  Administracion.h  Main.cpp  Propiedad.cpp  Propiedad.h  Propietario.cpp  Propietario.h  makefile
Tareas/polimorfismo/: BasePlusCommissionEmployee.cpp  CommissionEmployee.cpp  HourlyEmployee.cpp  HourlyEmployee.h
Tareas/polimorfismoTarea1.0/: BasePlusCommissionEmployee.h  CMakeLists.txt  CommissionEmployee.h  DailyEmployee.cpp  DailyEmployee.h  Empleado.cpp  Empleado.h  Main.cpp  SalariedEmployee.cpp  SalariedEmployee.h
parcial/: respuestas.md
parcial/Model/: Casino.cpp  DosColores.cpp  DosColores.h  Juego.h  Mayor13.cpp  Mayor13.h  Slots.cpp  Slots.h
parcial/View/: View.cpp
